--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -4,15 +4,15 @@ LogFile = error.log
 
 [ModuleManager]
 GraphicsModule = Direct3D9
-InputModule = WindowsInput
+InputModule = DirectInput
 SoundModule = DirectSound
 NetworkModule = WinNetwork
 PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1024
-ScreenHeight = 768
+ScreenWidth = 800
+ScreenHeight = 600
 Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
