svn path=/trunk/; revision=485

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -39,12 +39,10 @@ project (ZinekEngine)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS "ORCUN")
-
-#add_definitions (-DZE_DEBUG_ENABLED)
-#add_definitions (-DZE_DEBUG_BREAK_ON_ERROR)
-#add_definitions (-DZE_DEBUG_BREAK_ON_WARNING)
-#add_definitions (-DZE_DEBUG_ENABLE_MEMORY_CHECKS)
+set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS_DEBUG} 
+	ZE_ZINEK_ENGINE
+	"ZE_ZINEK_ENGINE_MAJOR_VERSION=0"
+	"ZE_ZINEK_ENGINE_MINOR_VERSION=5")
 
 include_directories (
 	${PROJECT_SOURCE_DIR} 
