--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,20 +52,21 @@ macro_ensure_out_of_source_build ("${PROJECT_NAME} requires an out of source bui
 
 SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
 
-add_definitions(-DZE_ZINEK_ENGINE)
+set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS_DEBUG} 
+	ZE_ZINEK_PLATFORM)
 
-#	add_definition (-DZE_DEBUG_ENABLED)
-#	add_definition (-DZE_DEBUG_BREAK_ON_ERROR)
-#	add_definition (-DZE_DEBUG_BREAK_ON_WARNING)
-#	add_definition (-DZE_DEBUG_ENABLE_MEMORY_CHECKS)
-
+set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ${COMPILE_DEFINITIONS_DEBUG} 
+	ZE_DEBUG_ENABLED 
+	ZE_DEBUG_BREAK_ON_ERROR 
+	_ZE_DEBUG_BREAK_ON_WARNING
+	_ZE_DEBUG_ENABLE_MEMORY_CHECKS)
 
 set (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 set (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 
 
-SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS OFF)
+set_property(GLOBAL PROPERTY USE_FOLDERS OFF)
 
 
 ## Files
