--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -35,7 +35,9 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-#add_definitions (-DZE_DEBUG_D3D9_PERFHUD -DZE_DEBUG_D3D9_SHADERS)
+set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ${COMPILE_DEFINITIONS_DEBUG} 
+	ZE_DEBUG_D3D9_DEBUG_SHADERS
+	ZE_DEBUG_D3D9_ENABLE_PERFHUD)
 
 add_subdirectory (ZED3D9PostProcessor)
 
