Texture tools added
svn path=/branches/v0.5.3-TextureCompression/; revision=496

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ add_subdirectory (Source)
 add_subdirectory (ZEToolSDK)
 add_subdirectory (ZEFoundation)
 add_subdirectory (ZE3dsMax)
-add_subdirectory (ZEditor)
+#add_subdirectory (ZEditor)
 
 ## PACKING
 #########################################################################################
