load function added to texture2dresource.h
svn path=/branches/v0.5.3-TextureCompression/; revision=500

--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -112,7 +112,9 @@ add_source (ZETextureTools.h				Sources)
 
 
 add_library (ZEGraphics ${Sources})
+target_link_libraries (ZEGraphics ATI_Compress_MT_VC8.lib)
 target_link_libraries (ZEGraphics freeimage.lib)
+
 
 set_property(TARGET ZEGraphics PROPERTY FOLDER "Zinek Engine")
 
