CHG: ZEDGizmo moved from ZEditor to Zinek Engine. ADD: Get/Set Local Position/Rotation functions added to ZEModelBone. IMP: RenderList Order and Priority features added to ZEGrid
svn path=/trunk/; revision=503

--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -55,6 +55,8 @@ add_source (ZEGameProvider.cpp		Sources)
 add_source (ZEGameProvider.h		Sources ZESDK)
 add_source (ZEGrid.cpp				Sources)
 add_source (ZEGrid.h				Sources	ZESDK ZEPP)
+add_source (ZEGizmo.cpp	    		Sources)
+add_source (ZEGizmo.h				Sources	ZESDK ZEPP)
 add_source (ZEPlayer.cpp			Sources)
 add_source (ZEPlayer.h				Sources ZESDK ZEPP)
 add_source (ZEPortal.cpp			Sources)
