ZEFile, ZEPartialFile added.
svn path=/branches/v0.5.3-TextureCompression/; revision=513

--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -65,6 +65,8 @@ add_source (ZEResource.cpp				Sources)
 add_source (ZEResource.h				Sources ZESDK)
 add_source (ZEResourceFile.cpp			Sources)
 add_source (ZEResourceFile.h			Sources ZESDK)
+add_source (ZEFile.cpp			Sources)
+add_source (ZEFile.h			Sources ZESDK)
 add_source (ZEResourceManager.cpp		Sources)
 add_source (ZEResourceManager.h			Sources ZESDK)
 add_source (ZEWindow.cpp				Sources)
