CHG: Major Project changes
svn path=/trunk/; revision=524

--- a/ZEditor/ZEDBrowser/CMakeLists.txt
+++ b/ZEditor/ZEDBrowser/CMakeLists.txt
@@ -37,9 +37,9 @@ cmake_minimum_required (VERSION 2.8)
 
 include(${QT_USE_FILE})
 
-add_source (ZEDAssertBrowser.cpp				Sources)
-add_source (ZEDAssertBrowser.h				Sources QtMocs)
-add_source (ZEDAssertBrowser.ui					Sources QtUI)
+add_source (ZEDBrowser.cpp				Sources)
+add_source (ZEDBrowser.h				Sources QtMocs)
+add_source (ZEDBrowser.ui					Sources QtUI)
 
 add_source (ZEDBrowserItem.cpp					Sources)
 add_source (ZEDBrowserItem.h					Sources)
