CHG: ZEModule description changed. GetModule type has been removed and GetBaseModuleDescription added. CHG: ZECore detects module type from base module types. Fixed module types became extensible. CHG: GetModuleDescription and ModuleDescription functions added to Modules. ADD: Freespace Input module added for Freespace HID devices.
svn path=/trunk/; revision=526

--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -54,6 +54,8 @@ add_source (ZEGraphicsDebugModule.cpp       Sources)
 add_source (ZEGraphicsDebugModule.h         Sources)
 add_source (ZEGraphicsModule.cpp 			Sources)
 add_source (ZEGraphicsModule.h 				Sources ZESDK ZEPP)
+add_source (ZEGraphicsModuleDescription.cpp Sources)
+add_source (ZEGraphicsModuleDescription.h 	Sources ZESDK ZEPP)
 add_source (ZEIndexedPolygon.h 				Sources ZESDK)
 add_source (ZELight.cpp 					Sources)
 add_source (ZELight.h 						Sources ZESDK ZEPP)
