--- a/Source/ZEInput/CMakeLists.txt
+++ b/Source/ZEInput/CMakeLists.txt
@@ -41,12 +41,14 @@ add_subdirectory (ZEVirtualInput)
 add_subdirectory (ZEWindowsInput)
 add_subdirectory (ZEFreespaceInput)
 
-add_source (ZEInputDefinitions.cpp	Sources)
-add_source (ZEInputDefinitions.h	Sources ZESDK)
-add_source (ZEInputMap.cpp			Sources)
-add_source (ZEInputMap.h			Sources ZESDK)
-add_source (ZEInputModule.cpp		Sources)
-add_source (ZEInputModule.h			Sources ZESDK)
+add_source (ZEInputDefinitions.cpp				Sources)
+add_source (ZEInputDefinitions.h				Sources ZESDK)
+add_source (ZEInputMap.cpp						Sources)
+add_source (ZEInputMap.h						Sources ZESDK)
+add_source (ZEInputModule.cpp					Sources)
+add_source (ZEInputModule.h						Sources ZESDK)
+add_source (ZEInputModuleDescription.cpp		Sources)
+add_source (ZEInputModuleDescription.h			Sources ZESDK)
 
 add_library (ZEInput ${Sources})
 
