--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -4,16 +4,16 @@ LogFile = error.log
 
 [ModuleManager]
 GraphicsModule = Direct3D9
-InputModule = WindowsInput
+InputModule = FreespaceInput
 SoundModule = DirectSound
 NetworkModule = WinNetwork
 PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1280
-ScreenHeight = 800
-Fullscreen = false
+ScreenWidth = 1024
+ScreenHeight = 768
+Fullscreen = true
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
