--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -35,42 +35,46 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZECommand.cpp				Sources)
-add_source (ZECommand.h					Sources ZESDK)
-add_source (ZECommandManager.cpp		Sources)
-add_source (ZECommandManager.h			Sources ZESDK)
-add_source (ZECommandSection.cpp		Sources)
-add_source (ZECommandSection.h			Sources ZESDK)
-add_source (ZEConsole.cpp				Sources)
-add_source (ZEConsole.h					Sources ZESDK)
-add_source (ZEConsoleWindow.cpp			Sources)
-add_source (ZEConsoleWindow.h			Sources ZESDK)
-add_source (ZECore.cpp					Sources)
-add_source (ZECore.h					Sources ZESDK)
-add_source (ZEDebugModule.cpp			Sources)
-add_source (ZEDebugModule.h				Sources ZESDK)
-add_source (ZEError.cpp					Sources)
-add_source (ZEError.h					Sources ZESDK)
-add_source (ZEModule.cpp				Sources)
-add_source (ZEModule.h					Sources ZESDK)
-add_source (ZEModuleManager.cpp			Sources)
-add_source (ZEModuleManager.h			Sources ZESDK)
-add_source (ZEOption.cpp				Sources)
-add_source (ZEOption.h					Sources ZESDK)
-add_source (ZEOptionManager.cpp			Sources)
-add_source (ZEOptionManager.h			Sources ZESDK)
-add_source (ZEOptionSection.cpp			Sources)
-add_source (ZEOptionSection.h			Sources ZESDK)
-add_source (ZEResource.cpp				Sources)
-add_source (ZEResource.h				Sources ZESDK)
-add_source (ZEResourceFile.cpp			Sources)
-add_source (ZEResourceFile.h			Sources ZESDK)
-add_source (ZEResourceManager.cpp		Sources)
-add_source (ZEResourceManager.h			Sources ZESDK)
-add_source (ZEWindow.cpp				Sources)
-add_source (ZEWindow.h					Sources ZESDK)
-add_source (ZEWindowResources.h			Sources)
-add_source (ZEWindowResources.rc		Sources)
+add_source (ZECommand.cpp					Sources)
+add_source (ZECommand.h						Sources ZESDK)
+add_source (ZECommandManager.cpp			Sources)
+add_source (ZECommandManager.h				Sources ZESDK)
+add_source (ZECommandSection.cpp			Sources)
+add_source (ZECommandSection.h				Sources ZESDK)
+add_source (ZEConsole.cpp					Sources)
+add_source (ZEConsole.h						Sources ZESDK)
+add_source (ZEConsoleWindow.cpp				Sources)
+add_source (ZEConsoleWindow.h				Sources ZESDK)
+add_source (ZECore.cpp						Sources)
+add_source (ZECore.h						Sources ZESDK)
+add_source (ZEDebugModule.cpp				Sources)
+add_source (ZEDebugModule.h					Sources ZESDK)
+add_source (ZEDebugModuleDescription.cpp	Sources)
+add_source (ZEDebugModuleDescription.h		Sources ZESDK)
+add_source (ZEError.cpp						Sources)
+add_source (ZEError.h						Sources ZESDK)
+add_source (ZEModule.cpp					Sources)
+add_source (ZEModule.h						Sources ZESDK)
+add_source (ZEModuleDescription.cpp			Sources)
+add_source (ZEModuleDescription.h			Sources ZESDK)
+add_source (ZEModuleManager.cpp				Sources)
+add_source (ZEModuleManager.h				Sources ZESDK)
+add_source (ZEOption.cpp					Sources)
+add_source (ZEOption.h						Sources ZESDK)
+add_source (ZEOptionManager.cpp				Sources)
+add_source (ZEOptionManager.h				Sources ZESDK)
+add_source (ZEOptionSection.cpp				Sources)
+add_source (ZEOptionSection.h				Sources ZESDK)
+add_source (ZEResource.cpp					Sources)
+add_source (ZEResource.h					Sources ZESDK)
+add_source (ZEResourceFile.cpp				Sources)
+add_source (ZEResourceFile.h				Sources ZESDK)
+add_source (ZEResourceManager.cpp			Sources)
+add_source (ZEResourceManager.h				Sources ZESDK)
+add_source (ZEWindow.cpp					Sources)
+add_source (ZEWindow.h						Sources ZESDK)
+add_source (ZEWindowResources.h				Sources)
+add_source (ZEWindowResources.rc			Sources)
 
 add_library (ZECore ${Sources})
 
