CHG: ZEDebugModule renamed to ZEApplicationModule which is a base module for an application that is developed by using Zinek Engine.
svn path=/trunk/; revision=528

--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -47,10 +47,10 @@ add_source (ZEConsoleWindow.cpp				Sources)
 add_source (ZEConsoleWindow.h				Sources ZESDK)
 add_source (ZECore.cpp						Sources)
 add_source (ZECore.h						Sources ZESDK)
-add_source (ZEDebugModule.cpp				Sources)
-add_source (ZEDebugModule.h					Sources ZESDK)
-add_source (ZEDebugModuleDescription.cpp	Sources)
-add_source (ZEDebugModuleDescription.h		Sources ZESDK)
+add_source (ZEApplicationModule.cpp			Sources)
+add_source (ZEApplicationModule.h			Sources ZESDK)
+add_source (ZEApplicationModuleDescription.cpp		Sources)
+add_source (ZEApplicationModuleDescription.h		Sources ZESDK)
 add_source (ZEError.cpp						Sources)
 add_source (ZEError.h						Sources ZESDK)
 add_source (ZEModule.cpp					Sources)
