--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -53,6 +53,12 @@ add_source (ZEApplicationModuleDescription.cpp		Sources)
 add_source (ZEApplicationModuleDescription.h		Sources ZESDK)
 add_source (ZEError.cpp						Sources)
 add_source (ZEError.h						Sources ZESDK)
+add_source (ZEExtension.cpp					Sources)
+add_source (ZEExtension.h					Sources ZESDK)
+add_source (ZEExtensionDescription.cpp		Sources)
+add_source (ZEExtensionDescription.h		Sources ZESDK)
+add_source (ZEExtensionManager.cpp			Sources)
+add_source (ZEExtensionManager.h			Sources ZESDK)
 add_source (ZEModule.cpp					Sources)
 add_source (ZEModule.h						Sources ZESDK)
 add_source (ZEModuleDescription.cpp			Sources)
@@ -65,6 +71,10 @@ add_source (ZEOptionManager.cpp				Sources)
 add_source (ZEOptionManager.h				Sources ZESDK)
 add_source (ZEOptionSection.cpp				Sources)
 add_source (ZEOptionSection.h				Sources ZESDK)
+add_source (ZEPlugin.cpp					Sources)
+add_source (ZEPlugin.h						Sources ZESDK)
+add_source (ZEPluginManager.cpp				Sources)
+add_source (ZEPluginManager.h				Sources ZESDK)
 add_source (ZEResource.cpp					Sources)
 add_source (ZEResource.h					Sources ZESDK)
 add_source (ZEResourceFile.cpp				Sources)
@@ -75,6 +85,8 @@ add_source (ZEWindow.cpp					Sources)
 add_source (ZEWindow.h						Sources ZESDK)
 add_source (ZEWindowResources.h				Sources)
 add_source (ZEWindowResources.rc			Sources)
+add_source (ZEVersion.cpp					Sources)
+add_source (ZEVersion.h						Sources ZESDK)
 
 add_library (ZECore ${Sources})
 
