--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -71,6 +71,8 @@ add_source (ZED3D9SkyBoxMaterial.cpp		Sources)
 add_source (ZED3D9SkyBoxMaterial.h			Sources)
 add_source (ZED3D9SSAOProcessor.cpp			Sources)
 add_source (ZED3D9SSAOProcessor.h			Sources)
+add_source (ZED3D9SSAAProcessor.cpp			Sources)
+add_source (ZED3D9SSAAProcessor.h			Sources)
 add_source (ZED3D9Texture2D.cpp				Sources)
 add_source (ZED3D9Texture2D.h				Sources)
 add_source (ZED3D9Texture3D.cpp				Sources)
