ADD: ZEInputDevice extension added. ADD: ZEFreespaceInputDevice extension added. FIX: ZEExtensionManager bugs fixed.
svn path=/trunk/; revision=532

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,10 +59,10 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
 append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
 	ZE_ZINEK
 	ZE_ZINEK_VERSION_PLATFORM=ZE_VP_WIN32
-	ZE_ZINEK_VERSION_MAJOR=0
-	ZE_ZINEK_VERSION_MINOR=5
-	ZE_ZINEK_VERSION_INTERNAL=0
-	ZE_ZINEK_VERSION_BUILD=5000)
+	ZE_ZINEK_VERSION_MAJOR=${ZINEK_VERSION_MAJOR}
+	ZE_ZINEK_VERSION_MINOR=${ZINEK_VERSION_MINOR}
+	ZE_ZINEK_VERSION_INTERNAL=${ZINEK_VERSION_INTERNAL}
+	ZE_ZINEK_VERSION_BUILD=${ZINEK_VERSION_BUILD})
 
 append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG 
 	ZE_DEBUG_ENABLED 
