--- a/Source/ZEInput/CMakeLists.txt
+++ b/Source/ZEInput/CMakeLists.txt
@@ -41,14 +41,28 @@ add_subdirectory (ZEVirtualInput)
 add_subdirectory (ZEWindowsInput)
 add_subdirectory (ZEFreespaceInput)
 
-add_source (ZEInputDefinitions.cpp				Sources)
-add_source (ZEInputDefinitions.h				Sources ZESDK)
-add_source (ZEInputMap.cpp						Sources)
-add_source (ZEInputMap.h						Sources ZESDK)
-add_source (ZEInputModule.cpp					Sources)
-add_source (ZEInputModule.h						Sources ZESDK)
-add_source (ZEInputModuleDescription.cpp		Sources)
-add_source (ZEInputModuleDescription.h			Sources ZESDK)
+add_source (ZEInputAction.cpp						Sources)
+add_source (ZEInputAction.h							Sources ZESDK)
+add_source (ZEInputDefinitions.cpp					Sources)
+add_source (ZEInputDefinitions.h					Sources ZESDK)
+add_source (ZEInputDescription.cpp					Sources)
+add_source (ZEInputDescription.h					Sources ZESDK)
+add_source (ZEInputDevice.cpp						Sources)
+add_source (ZEInputDevice.h							Sources ZESDK)
+add_source (ZEInputDeviceExtension.cpp				Sources)
+add_source (ZEInputDeviceExtension.h				Sources ZESDK)
+add_source (ZEInputDeviceExtensionDescription.cpp	Sources)
+add_source (ZEInputDeviceExtensionDescription.h		Sources ZESDK)
+add_source (ZEInputEvent.cpp						Sources)
+add_source (ZEInputEvent.h							Sources ZESDK)
+add_source (ZEInputMap.cpp							Sources)
+add_source (ZEInputMap.h							Sources ZESDK)
+add_source (ZEInputMapBinding.cpp					Sources)
+add_source (ZEInputMapBinding.h						Sources ZESDK)
+add_source (ZEInputModule.cpp						Sources)
+add_source (ZEInputModule.h							Sources ZESDK)
+add_source (ZEInputModuleDescription.cpp			Sources)
+add_source (ZEInputModuleDescription.h				Sources ZESDK)
 
 add_library (ZEInput ${Sources})
 
