ADD: ZESystemMessageHandler and ZESystemMessageManager classes added. ADD: ZEWindowsModule migration started.
svn path=/trunk/; revision=533

--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -81,6 +81,10 @@ add_source (ZEResourceFile.cpp				Sources)
 add_source (ZEResourceFile.h				Sources ZESDK)
 add_source (ZEResourceManager.cpp			Sources)
 add_source (ZEResourceManager.h				Sources ZESDK)
+add_source (ZESystemMessageManager.cpp		Sources)
+add_source (ZESystemMessageManager.h		Sources ZESDK)
+add_source (ZESystemMessageHandler.cpp		Sources)
+add_source (ZESystemMessageHandler.h		Sources ZESDK)
 add_source (ZEWindow.cpp					Sources)
 add_source (ZEWindow.h						Sources ZESDK)
 add_source (ZEWindowResources.h				Sources)
