--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -13,7 +13,7 @@ GameModule = TestGame
 [Graphics]
 ScreenWidth = 1024
 ScreenHeight = 768
-Fullscreen = true
+Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
