FIX: DirectSound module missing dxguid.lib fixed. CHG: ZEModule::IsEnabled function has been changed to ZEModule::GetEnabled. ADD: Initialization mechanism added to ZEModule. ZEModule initialization mechanism changed every module should call perents initialization and deinitialization functions when initialization function called. ADD: Enabled/Disabled mechanisms added ZEModule. ADD: Acquired/UnAcquired functions added to ZEInputModule. FIX: ZEWindowsInput module major bug fixes. FIX: ZESystemMessageManager/Handler major bug fixes.
svn path=/trunk/; revision=535

--- a/Source/ZEInput/CMakeLists.txt
+++ b/Source/ZEInput/CMakeLists.txt
@@ -35,9 +35,9 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory (ZEDirectInput)
-add_subdirectory (ZEDummyInput)
-add_subdirectory (ZEVirtualInput)
+#add_subdirectory (ZEDirectInput)
+#add_subdirectory (ZEDummyInput)
+#add_subdirectory (ZEVirtualInput)
 add_subdirectory (ZEWindowsInput)
 add_subdirectory (ZEFreespaceInput)
 
