ADD: Sampling, addressing mode, filtering mode added to ZEBitmap. ADD: ZEPixelColor added. FIX: ZEBitmap pixel format bug fixed. ADD: VRPN input device extension added. FIX: ZEWindowMouseDevice fixed. FIX: Quaternion euler yawn pitch roll fixed. ADD: Division operators added to ZEVectors. FIX: Major minor bug fixes and improvements on System Message mechanism. FIX: Major and minor bug fixes and improvements on Extension mechanism. FIX: ZECamere dirty flag bug fixed. FIX: Windows create error bug fixed. ADD: Height map ray cast collision detection added to Moon application.
svn path=/trunk/; revision=536

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,9 +11,9 @@ PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1024
-ScreenHeight = 768
-Fullscreen = false
+ScreenWidth = 800
+ScreenHeight = 600
+Fullscreen = true
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
