--- a/ZEditor/ZEDMaterialEditor/CMakeLists.txt
+++ b/ZEditor/ZEDMaterialEditor/CMakeLists.txt
@@ -37,28 +37,20 @@ cmake_minimum_required (VERSION 2.8)
 
 include(${QT_USE_FILE})
 
-add_source (ZEDPlugIn.cpp		              Sources)
-add_source (ZEDPlugIn.h			              Sources)
+# add_source (main.cpp							Sources)
+add_source (ZEDMaterialEditor.h					Sources QtMocs)
+add_source (ZEDMaterialEditor.ui				Sources QtUI)
+add_source (ZEDMaterialEditor.cpp				Sources)
+add_source (ZEDMaterialEditor.qrc				Sources QtResources)
+add_source (ZEDMaterialEditorViewPort.h			Sources)
+add_source (ZEDMaterialEditorViewPort.cpp		Sources)
 
-add_source (ZEDExtension.cpp		          Sources)
-add_source (ZEDExtension.h			          Sources)
-
-add_source (ZEDFileExtension.cpp		      Sources)
-add_source (ZEDFileExtension.h			      Sources)
-
-add_source (ZEDPreviewWidget.cpp		      Sources)
-add_source (ZEDPreviewWidget.h			      Sources)
-
-add_source (ZEDPlugInManager.cpp		      Sources)
-add_source (ZEDPlugInManager.h			      Sources)
-
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories (${CMAKE_CURRENT_BINARY_DIR})
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
-add_library (ZEDCore ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
+add_library (ZEDMaterialEditor ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
 
-set_property(TARGET ZEDCore PROPERTY FOLDER "ZEditor")
+set_property(TARGET ZEDMaterialEditor PROPERTY FOLDER "ZEditor")
