FIX: System Message handler added to ZECore. WM_QUIT bug fixed. CHG: ZE_IBS_ALL renamed to ZE_IBS_PRESSING. IMP: Improvements and bug fixes on ZEWindowsKeyboardDevice. FIX: Deleted ZEMoon.h and cpp which are left outs of branching ZEMoon from ZEBackhoe.
svn path=/trunk/; revision=541

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -13,7 +13,7 @@ GameModule = TestGame
 [Graphics]
 ScreenWidth = 800
 ScreenHeight = 600
-Fullscreen = true
+Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
