ADD: ZEUnderground application added. CHG: ZEFile moved from const char* to ZEString.cpp. ADD: Directory and file query functions added ZEFile.cpp. FIX: ZETextureCache non-resizable image pixel format bug fixed. ADD: Relative Resource File Path system modifications has started. NOT FINISHED ! CHG: ZE3dsMaxMapExporter revised according to Resource File Relative Path specification. ADD: Floating point color support added to ZEBitmap. FIX: ZEString Subscripting operator ambiguity fixed. FIX: ZEArray const subscripting operator ambiguity fixed.
svn path=/trunk/; revision=543

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ include(append_property)
 macro_ensure_out_of_source_build ("${PROJECT_NAME} requires an out of source build.")
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI" )
 
 append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
 	ZE_ZINEK
