ADD : ZETerrain, ZEUIBloodSplashFrameControl, ZEZombieNPC, ZEZombieSpawnPoint CHG : ZEPortalMap now has GetResource function CHG : TextureCache enabled from ZEGraphicsModule.cpp CHG : Do2DPass and AA pass function call order changed ADD : YMO Programmed
svn path=/trunk/; revision=560

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -5,14 +5,14 @@ LogFile = error.log
 [ModuleManager]
 GraphicsModule = Direct3D9
 InputModule = WindowsInput
-SoundModule = DirectSound
+SoundModule = OpenAL
 NetworkModule = WinNetwork
 PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1680
-ScreenHeight = 1024
+ScreenWidth = 1024
+ScreenHeight = 768
 Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
