--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -39,12 +39,16 @@ add_source (ZEAllocator.cpp			Sources)
 add_source (ZEAllocator.h			Sources ZESDK)
 add_source (ZEArray.cpp				Sources)
 add_source (ZEArray.h				Sources ZESDK)
+add_source (ZECompressedFile.cpp	Sources)
+add_source (ZECompressedFile.h		Sources ZESDK)
 add_source (ZEDSDefinitions.cpp		Sources)
 add_source (ZEDSDefinitions.h		Sources ZESDK)
 add_source (ZEFileCache.cpp			Sources)
 add_source (ZEFileCache.h			Sources ZESDK)
 add_source (ZENamed.cpp				Sources)
 add_source (ZENamed.h				Sources ZESDK)
+add_source (ZEPack.cpp				Sources)
+add_source (ZEPack.h				Sources ZESDK)
 add_source (ZEString.cpp			Sources)
 add_source (ZEString.h				Sources ZESDK)
 add_source (ZETypedVariant.cpp		Sources)
@@ -53,6 +57,8 @@ add_source (ZEVariant.cpp			Sources)
 add_source (ZEVariant.h				Sources ZESDK)
 
 add_library (ZEDS ${Sources})
+
+target_link_libraries(ZEDS zlib.lib)
 
 set_property(TARGET ZEDS PROPERTY FOLDER "ZEFoundation")
 
