FIX: SVN bug fixes. REM: ZEDeviceDescription removed. ADD: Axis, Button, Vector and Quaternion count functions added to ZEInputDevice.
svn path=/trunk/; revision=569

--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -79,10 +79,10 @@ add_source (ZED3D9Texture3D.cpp				Sources)
 add_source (ZED3D9Texture3D.h				Sources)
 add_source (ZED3D9TextureCube.cpp			Sources)
 add_source (ZED3D9TextureCube.h				Sources)
-#add_source (ZED3D9TextureResizeFilters.cpp	Sources)
-#add_source (ZED3D9TextureResizeFilters.h	Sources)
-#add_source (ZED3D9TextureResizer.cpp		Sources)
-#add_source (ZED3D9TextureResizer.h			Sources)
+add_source (ZED3D9TextureResizeFilters.cpp	Sources)
+add_source (ZED3D9TextureResizeFilters.h	Sources)
+add_source (ZED3D9TextureResizer.cpp		Sources)
+add_source (ZED3D9TextureResizer.h			Sources)
 add_source (ZED3D9UIMaterial.cpp			Sources)
 add_source (ZED3D9UIMaterial.h				Sources)
 add_source (ZED3D9VertexBuffer.cpp			Sources)
