FIX: ZEWindowsKeyboardInputDevice GetName() bug fixed. FIX: ZEInputEvent wrong Input Device name bug fixed.
svn path=/trunk/; revision=570

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,9 +81,8 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 add_subdirectory (Source)
 add_subdirectory (ZEToolSDK)
 add_subdirectory (ZEFoundation)
-#add_subdirectory (ZE3dsMax)
-#add_subdirectory (ZEditor)
-#add_subdirectory (Applications)
+add_subdirectory (ZE3dsMax)
+add_subdirectory (ZEditor)
 
 ## PACKING
 #########################################################################################
