FIX: SVN Left outs. ADD: ZEBase class added. This class will be base of all ZE classes. FIX: Several release configuration bug fixes.
svn path=/trunk/; revision=574

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -13,7 +13,7 @@ GameModule = TestGame
 [Graphics]
 ScreenWidth = 1024
 ScreenHeight = 768
-Fullscreen = false
+Fullscreen = true
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
