CHG: ZEAABoundingBox renamed to ZEAABBox. CHG: ZEOBoundingBox renamed to ZEOBBox. CHG: ZEBoundingSphere renamed to ZEBSphere.
svn path=/trunk/; revision=577

--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -35,10 +35,10 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEAABoundingBox.cpp		Sources)
-add_source (ZEAABoundingBox.h		Sources ZESDK)
-add_source (ZEBoundingSphere.cpp	Sources)
-add_source (ZEBoundingSphere.h		Sources ZESDK)
+add_source (ZEAABBox.cpp			Sources)
+add_source (ZEAABBox.h				Sources ZESDK)
+add_source (ZEBSphere.cpp			Sources)
+add_source (ZEBSphere.h				Sources ZESDK)
 add_source (ZEMathDefinitions.cpp	Sources)
 add_source (ZEMathDefinitions.h		Sources ZESDK)
 add_source (ZELine.cpp				Sources)
@@ -47,8 +47,8 @@ add_source (ZELineSegment.cpp		Sources)
 add_source (ZELineSegment.h			Sources ZESDK)
 add_source (ZEMatrix.cpp			Sources)
 add_source (ZEMatrix.h				Sources ZESDK)
-add_source (ZEOBoundingBox.cpp		Sources)
-add_source (ZEOBoundingBox.h		Sources ZESDK)
+add_source (ZEOBBox.cpp				Sources)
+add_source (ZEOBBox.h				Sources ZESDK)
 add_source (ZEPlane.cpp				Sources)
 add_source (ZEPlane.h				Sources ZESDK)
 add_source (ZEQuaternion.cpp		Sources)
