FIX: exit(0) called when window closed. ADD: ClampLower, ClampUpper functions added to ZEVector3. ADD: New intersection tests added to ZEBSphere.
svn path=/trunk/; revision=581

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,8 @@ append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS
 	ZE_ZINEK_VERSION_BUILD=${ZINEK_VERSION_BUILD})
 
 append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG 
-	ZE_DEBUG_ENABLED 
-	ZE_DEBUG_BREAK_ON_ERROR 
+	_ZE_DEBUG_ENABLED 
+	_ZE_DEBUG_BREAK_ON_ERROR 
 	_ZE_DEBUG_BREAK_ON_WARNING
 	_ZE_DEBUG_ENABLE_MEMORY_CHECKS)
 
